server static & route

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-DATABASE=mongodb://localhost:27017/mongoDB-user-post
+MONGODB_URI=mongodb://localhost:27017/mongoDB-user-post
 TOKEN=CRA-3425rststRz
